--- a/app/index.css
+++ b/app/index.css
@@ -2,7 +2,6 @@ html, body, #app {
   margin: 0;
   height: 100%;
   width: 100%;
-
 }
 
 body {
@@ -41,6 +40,11 @@ li {
   color: inherit;
 }
 
+.nav-link:hover {
+  opacity: .5;
+  border: 1px solid gray;
+}
+
 .grid {
   display: flex;
   flex-wrap: wrap;
@@ -54,6 +58,12 @@ li {
   font-size: 35px;
   font-weight: 300;
   margin: 20px;
+}
+
+.header-sm {
+  font-size: 28px;
+  font-weight: 300;
+  margin: 10px;
 }
 
 .avatar {
@@ -111,4 +121,31 @@ li {
 
 .repo img {
   margin-bottom: 8px;
+}
+
+.instructions-container {
+  margin: 100px 0;
+}
+
+.container-sm {
+  width: 80%;
+  margin: 0 auto;
+}
+
+.battle-instructions {
+  padding: 0;
+  font-size: 25px;
+}
+
+.battle-instructions li {
+  flex: 1;
+  min-width: 300px;
+  background: #a2b3b6;
+  margin: 10px;
+  border-radius: 25px;
+}
+
+.battle-instructions svg {
+  padding: 40px;
+  border-radius: 3px;
 }
