--- a/app/index.css
+++ b/app/index.css
@@ -1,11 +1,13 @@
-html, body, #app {
+html,
+body,
+#app {
   margin: 0;
   height: 100%;
   width: 100%;
 }
 
 body {
-  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica Neue,sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen-Sans, Ubuntu, Cantarell, Helvetica Neue, sans-serif;
 }
 
 ul {
@@ -140,7 +142,7 @@ li {
 .battle-instructions li {
   flex: 1;
   min-width: 300px;
-  background: #a2b3b6;
+  background: #f1f0f0;
   margin: 10px;
   border-radius: 25px;
 }
