--- a/app/index.css
+++ b/app/index.css
@@ -1,11 +1,14 @@
-html, body, #app {
+html,
+body,
+#app {
   margin: 0;
   height: 100%;
   width: 100%;
 }
 
 body {
-  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica Neue,sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen-Sans,
+    Ubuntu, Cantarell, Helvetica Neue, sans-serif;
 }
 
 ul {
@@ -134,7 +137,7 @@ li {
 
 .battle-instructions li {
   flex: 1;
-  min-width: 300px
+  min-width: 300px;
 }
 
 .battle-instructions svg {
@@ -185,7 +188,7 @@ li {
 .btn {
   padding: 10px;
   text-decoration: uppercase;
-  letter-spacing: .25em;
+  letter-spacing: 0.25em;
   border-radius: 3px;
   border: none;
   font-size: 16px;
@@ -195,6 +198,45 @@ li {
   cursor: pointer;
   text-decoration: none;
   max-width: 200px;
+}
+
+.animated-border-button {
+  background-color: #141414;
+  border: none;
+  color: #ffffff;
+  outline: none;
+  padding: 12px 40px 10px;
+  position: relative;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.animated-border-button:before,
+.animated-border-button:after {
+  border: 0 solid transparent;
+  transition: all 0.3s;
+  content: "";
+  height: 0;
+  position: absolute;
+  width: 24px;
+}
+
+.animated-border-button:before {
+  border-top: 2px solid #141414;
+  right: 0;
+  top: -4px;
+}
+
+.animated-border-button:after {
+  border-bottom: 2px solid #141414;
+  bottom: -4px;
+  left: 0;
+}
+
+.animated-border-button:hover:before,
+.animated-border-button:hover:after {
+  width: 100%;
 }
 
 .dark-btn {
