implemented theme selector in navbar

--- a/app/index.css
+++ b/app/index.css
@@ -19,6 +19,12 @@ li {
   list-style-type: none;
 }
 
+.dark {
+  color: #dadada;
+  background: #1c2022;
+  min-height: 100%
+}
+
 .container {
   max-width: 1200px;
   margin: 0 auto;
