--- a/app/index.css
+++ b/app/index.css
@@ -254,7 +254,7 @@ li {
 }
 
 .animated-border-button.light-btn:after {
-  border-top: 2px solid #e6e6e6;
+  border-bottom: 2px solid #e6e6e6;
 }
 
 .animated-border-button:disabled:before {
